fixed panels + removed greco

--- a/attorneys.html
+++ b/attorneys.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
-    <meta name="author" content="" /> 
+    <meta name="author" content="" />
     <link rel="shortcut icon" href="favicon.ico" />
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <title>Barth Sullivan Behr</title>
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet" />
-   
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -56,7 +56,7 @@
 		  <li>
             <a  href="contact.html">Contact</a>
           </li>
-       
+
         </ul>
       </div><!-- /.navbar-collapse -->
     </nav>
@@ -65,25 +65,25 @@
  </div>
   <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="container">
-  
+
    <h2> Buffalo Office </h2>
    	<hr />
-  
-  
+
+
   <div class="col-md-2">
-  
+
   <img class="headshot" src="imgs/PCBw.jpg" >
-  
+
   </div>
-  
+
   <div  class="col-md-10">
-  
+
 	<h2> Philip C. Barth III </h2>
 	<h3> Partner </h3>
 	<p>Mr. Barth, grandson of the firm’s founder, is an experienced trial attorney who has tried cases for over twenty-five years. After graduating from the State University of New York at Buffalo Law School, Mr. Barth served as one of the most successful in-house trial attorneys at Fireman’s Fund Insurance Company. Since joining Barth Sullivan Behr in 1996, he has continued to amass an impressive record of trial and appellate successes. Mr. Barth has been an active member of the Defense Research Institute for many years and was nominated and approved for membership in the prestigious International Association of Defense Counsel (IADC) in 2004. He continues to litigate regularly, specializing in motor vehicle and premises liability.</p>
 	<div class="row">
 	<div class="col-md-6">
-	<h4> Contact: </h4> 
+	<h4> Contact: </h4>
 	Buffalo Office </br>
 	43 Court Street </br>
 	Suite 600</br>
@@ -92,14 +92,14 @@
 	<a href="mailto:pbarth@barthbehr.com">pbarth@barthbehr.com</a></br>
 	</div>
 	<div class="col-md-6">
-	<h4> Concentrations: </h4> 
+	<h4> Concentrations: </h4>
 	Motor Vehicle Litigation </br>
 	Trial and Appellate Litigation </br>
 	Workers’ Compensation Defense </br>
 	</div></div>
 	<div class="row">
 	<div class="col-md-6">
-	<h4> Affiliations: </h4> 
+	<h4> Affiliations: </h4>
 	Buffalo Claims Association </br>
 	Defense Research Institute </br>
 	Erie County Bar Association </br>
@@ -108,7 +108,7 @@
 	Western New York Defense Trial Lawyers Association </br>
 	</div>
 	<div class="col-md-6">
-	<h4> Admissions: </h4> 
+	<h4> Admissions: </h4>
 	State of New York </br>
 	U.S. District Court, Eastern District of New York </br>
 	U.S. District Court, Northern District of New York</br>
@@ -118,7 +118,7 @@
 	U.S. Supreme Court</br>
 	</div></div>
 	</div>
- 
+
    <div class="col-md-2">
    <img class="headshot" src="imgs/LDBw.jpg" >
    </div>
@@ -128,7 +128,7 @@
 	<p>Graduated from the State University of New York at Buffalo, B.A. cum laude (1974), and J.D. magna cum laude (1981).  Following his two-year service as Confidential Law Clerk to the United States District Judge John T. Elfvin (Western District of New York), Mr. Behr forged a distinguished career as a successful personal injury defense trial and appellate lawyer. Mr. Behr held partnerships in two of Buffalo’s most respected insurance defense firms, the former Saperston & Day, P.C. and Lustig & Brown LLP, prior to joining Barth Sullivan Behr in 1999. He has tried over thirty personal injury cases to successful defense verdicts, and has published numerous leading articles on important and timely insurance law topics.</p>
 	<div class="row">
 	<div class="col-md-6">
-	<h4> Contact: </h4> 
+	<h4> Contact: </h4>
 	Buffalo Office </br>
 	43 Court Street </br>
 	Suite 600</br>
@@ -137,7 +137,7 @@
 	<a href="mailto:lbehr@barthbehr.com">lbehr@barthbehr.com</a></br>
 	</div>
 	<div class="col-md-6">
-	<h4> Concentrations: </h4> 
+	<h4> Concentrations: </h4>
 	Insurance Coverage </br>
 	Premises, Motor Vehicle Liability </br>
 	Fire Loss Investigations and Defence </br>
@@ -148,14 +148,14 @@
 	</div></div>
 	<div class="row">
 	<div class="col-md-6">
-	<h4> Affiliations: </h4> 
+	<h4> Affiliations: </h4>
 	Buffalo Claims Association </br>
 	Erie County Bar Association </br>
 	National Lawyers Association </br>
 	Western New York Defense Trial Lawyers Association </br>
 	</div>
 	<div class="col-md-6">
-	<h4> Admissions: </h4> 
+	<h4> Admissions: </h4>
 	State of New York </br>
 	U.S. District Court, Eastern District of New York </br>
 	U.S. District Court, Northern District of New York</br>
@@ -163,39 +163,9 @@
 	U.S. Court of Appeals, Second Circuit</br>
 	U.S. Supreme Court</br>
 	</div></div>
-	
+
   </div>
-  
-  
-  <div class="col-md-2"><img class="headshot" src="imgs/JJGw.jpg" ></div>
-  <div id="minheight" class="col-md-10">
-	<h2> James J. Greco </h2>
-	<h3> Senior Trial Attorney </h3>
-	<p></p>
-	<div class="row">
-	<div class="col-md-6">
-	<h4> Contact: </h4> 
-	Buffalo Office </br>
-	43 Court Street </br>
-	Suite 600</br>
-	Buffalo, New York 14202</br>
-	(716) 856-1300</br>
-	<a href="mailto:jgreco@barthbehr.com">jgreco@barthbehr.com</a></br>
-	</div>
-	<div class="col-md-6">
-	<h4> Concentrations: </h4> 
-	
-	</div></div>
-	<div class="row">
-	<div class="col-md-6">
-	<h4> Affiliations: </h4> 
 
-	</div>
-	<div class="col-md-6">
-	<h4> Admissions: </h4> 
-
-  
-  </div></div></div>
   <div class="col-md-2"><img class="headshot" src="imgs/DPHw.jpg" ></div>
   <div id="minheight" class="col-md-10">
 	<h2> Douglas P. Hamberger </h2>
@@ -203,7 +173,7 @@
 	<p>Mr. Hamberger is a trial attorney with a wealth of experience, both civil and criminal, having tried cases for over thirty years. Following graduation from the University of Miami School of Law, Mr. Hamberger practiced law in South Florida before joining the Erie County District Attorney’s Office in Buffalo where he successfully tried in excess of five hundred criminal cases. Since joining Barth Sullivan Behr in 2007, he continues to try cases on a regular basis and concentrates his practice in the areas of motor vehicle liability, premises liability, toxic tort and labor law.</p>
 	<div class="row">
 	<div class="col-md-6">
-	<h4> Contact: </h4> 
+	<h4> Contact: </h4>
 	Buffalo Office </br>
 	43 Court Street </br>
 	Suite 600</br>
@@ -212,7 +182,7 @@
 	<a href="mailto:dhamberger@barthbehr.com">dhamberger@barthbehr.com</a></br>
 	</div>
 	<div class="col-md-6">
-	<h4> Concentrations: </h4> 
+	<h4> Concentrations: </h4>
 	Labor Law </br>
 	Lead Paint and Toxic Tort Defense </br>
 	Motor Vehicle Litigation </br>
@@ -221,20 +191,20 @@
 	</div></div>
 	<div class="row">
 	<div class="col-md-6">
-	<h4> Affiliations: </h4> 
+	<h4> Affiliations: </h4>
 	Bar Association of Erie County </br>
 	The Florida Bar </br>
 	Western New York Trial Lawyers Association </br>
 	</div>
 	<div class="col-md-6">
-	<h4> Admissions: </h4> 
+	<h4> Admissions: </h4>
 	State of New York </br>
 	State of Florida </br>
 	U.S. District Court, Southern District of New York</br>
 	U.S. District Court, Western District of New York</br>
-  
+
   </div> </div></div>
-  
+
     <div class="col-md-2"><img class="headshot" src="imgs/Alex.jpg" ></div>
   <div id="minheight" class="col-md-10">
 	<h2> Alex M. Neurohr</h2>
@@ -242,7 +212,7 @@
 	<p>Nova Southeastern University, B.S., 2011; SUNY Buffalo Law School, J.D., cum laude, 2014</p>
 	<div class="row">
 	<div class="col-md-6">
-	<h4> Contact: </h4> 
+	<h4> Contact: </h4>
 	Buffalo Office </br>
 	43 Court Street </br>
 	Suite 600</br>
@@ -251,7 +221,7 @@
 	<a href="mailto:aneurohr@barthbehr.com">aneurohr@barthbehr.com</a></br>
 	</div>
 	<div class="col-md-6">
-	<h4> Concentrations: </h4> 
+	<h4> Concentrations: </h4>
 	Labor Law </br>
 	Lead Paint and Toxic Tort Defense </br>
 	Motor Vehicle Litigation </br>
@@ -260,17 +230,17 @@
 	</div></div>
 	<div class="row">
 	<div class="col-md-6">
-	<h4> Affiliations: </h4> 
+	<h4> Affiliations: </h4>
 	FIU Law Review
 	Director of External Affairs, Labor and Employment Relations Society
 	Buffalo Intellectual Property Law Journal
 	</div>
 	<div class="col-md-6">
-	<h4> Admissions: </h4> 
+	<h4> Admissions: </h4>
 	State of New York </br>
-	
+
 	  </div> </div></div>
-  
+
     <div class="col-md-2"><img class="headshot" src="imgs/Dan.jpg" ></div>
   <div id="minheight" class="col-md-10">
 	<h2> Daniel Cartwright</h2>
@@ -278,7 +248,7 @@
 	<p>SUNY Buffalo, B.S., 2007; Florida International University College of Law, J.D., cum laude, 2014.</p>
 	<div class="row">
 	<div class="col-md-6">
-	<h4> Contact: </h4> 
+	<h4> Contact: </h4>
 	Buffalo Office </br>
 	43 Court Street </br>
 	Suite 600</br>
@@ -287,7 +257,7 @@
 	<a href="mailto:dcartwright@barthbehr.com">dcartwright@barthbehr.com</a></br>
 	</div>
 	<div class="col-md-6">
-	<h4> Concentrations: </h4> 
+	<h4> Concentrations: </h4>
 	Labor Law </br>
 	Lead Paint and Toxic Tort Defense </br>
 	Motor Vehicle Litigation </br>
@@ -296,7 +266,7 @@
 	</div></div>
 	<div id="space" class="row">
 	<div class="col-md-6">
-	<h4> Affiliations: </h4> 
+	<h4> Affiliations: </h4>
 	Vice—President, Moot Court </br>
 	Bar Association of Erie County </br>
 	New York State Bar Association</br>
@@ -304,15 +274,15 @@
 	Buffalo Intellectual Property Law Journal </br>
 	</div>
 	<div class="col-md-6">
-	<h4> Admissions: </h4> 
+	<h4> Admissions: </h4>
 	State of New York </br>
-	
-	
+
+
 	  </div> </div></div>
-		
+
 	   <h2>Syracuse Office</h2><hr />
-		
-	
+
+
 
 	 <div class="col-md-2"><img class="headshot" src="imgs/Bill.jpg" ></div>
      <div id="minheight" class="col-md-10">
@@ -321,7 +291,7 @@
 	<p>Mr. Savage is an experienced trial attorney who has tried cases throughout Upstate New York for fifteen years. Since joining Barth Sullivan Behr in 2010, he has achieved more than a dozen successful jury verdicts. Mr. Savage’s areas of concentration include automobile and premises liability, as well as pharmaceutical defense.  In fact, Mr. Savage argued effectively before the Appellate Division, Third Department in Albany to change existing law concerning pharmacist liability in the case of Brumaghim v. Rite Aid, 94 AD3d 1391 (3rd Dept. 2012), which has been reviewed in several legal journals. Before embarking on his legal career, Mr. Savage served in the U. S. Navy on board the USS Midway and USS Reuben James.</p>
 	<div class="row">
 	<div class="col-md-6">
-	<h4> Contact: </h4> 
+	<h4> Contact: </h4>
 	Syracuse Office </br>
 	224 Harrison Street </br>
 	Suite 208</br>
@@ -330,18 +300,18 @@
 	<a href="mailto:wsavage@barthbehr.com">wsavage@barthbehr.com</a></br>
 	</div>
 	<div class="col-md-6">
-	<h4> Concentrations: </h4> 
+	<h4> Concentrations: </h4>
 	Motor Vehicle Litigation </br>
 	Pharmaceutical Defense </br>
 	Premises Liability </br>
 	</div></div>
 	<div class="row">
 	<div class="col-md-6">
-	<h4> Affiliations: </h4> 
+	<h4> Affiliations: </h4>
 	New York State Bar Association </br>
 	</div>
 	<div class="col-md-6">
-	<h4> Admissions: </h4> 
+	<h4> Admissions: </h4>
 	State of New York </br>
 	U.S. District Court, Northern District of New York</br>
 	U.S. District Court, Western District of New York</br>
@@ -353,7 +323,7 @@
 	<p></p>
 	<div class="row">
 	<div class="col-md-6">
-	<h4> Contact: </h4> 
+	<h4> Contact: </h4>
 	Syracuse Office </br>
 	224 Harrison Street </br>
 	Suite 208</br>
@@ -362,35 +332,47 @@
 	<a href="mailto:dwalsh@barthbehr.com">dwalsh@barthbehr.com</a></br>
 	</div>
 	<div class="col-md-6">
-	<h4> Concentrations: </h4> 
-	
+	<h4> Concentrations: </h4>
+  Trial Litigation
+  Motor Vehicle La
+  Labor Law
+  Municipal Liability Products
+  Civil Rights Litigation
+  Employment Litigation
+  Premises Liability.
 	</div></div>
 	<div class="row">
 	<div class="col-md-6">
-	<h4> Affiliations: </h4> 
-	
+	<h4> Affiliations: </h4>
+  New York State Bar Association
 	</div>
 	<div class="col-md-6">
-	<h4> Admissions: </h4> 
-	
-  
-  </div></div></div>	
-	
-  </div>
-  
-  </div>
-  
-  
+	<h4> Admissions: </h4>
+  State of New York
+  U.S. District Court, Eastern District of New York
+  U.S. District Court, Northern District of New York
+  U.S. District Court, Southern District of New York
+  U.S. District Court, Western District of New York
+  U.S. Court of Appeals for Second Circuit
+  U.S. Court of Federal Claims
 
-  
-  
+  </div></div></div>
+
+  </div>
+
+  </div>
+
+
+
+
+
   <hr />
-  
-  
-  
+
+
+
     <footer>
       <div class="container">
-        
+
          <p id="copy"> <a href="http://barthbehr.com/"> &copy; Barth Sullivan Behr 2014 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney Advertising</p>
       </div>
     </footer>
@@ -399,6 +381,6 @@
   <!-- Bootstrap core JavaScript
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script></body>
 </html>
