--- a/attorneys.html
+++ b/attorneys.html
@@ -276,6 +276,7 @@
 	<div class="col-md-6">
 	<h4> Admissions: </h4>
 	State of New York </br>
+	U.S. District Court, Western District of N.Y.</br>
 
 
 	  </div> </div></div>
