added new people

--- a/attorneys.html
+++ b/attorneys.html
@@ -229,11 +229,20 @@
 			</div>
 		</div>
 
-		<div class="col-md-2"><img class="headshot" src="imgs/Alex.jpg"></div>
+		<div class="col-md-2"><img class="headshot" src="imgs/rebecca.jpg"></div>
 		<div id="minheight" class="col-md-10">
-			<h2> Alex M. Neurohr</h2>
+			<h2> Rebecca C. Cronauer</h2>
 			<h3> Associate Attorney </h3>
-			<p>Nova Southeastern University, B.S., 2011; SUNY Buffalo Law School, J.D., cum laude, 2014</p>
+			<p>Ms. Cronauer is an associate attorney working with the firm’s insurance defense and municipal liability practice groups.
+				Ms. Cronauer attended Saint Vincent College in Latrobe, Pennsylvania where she graduated magna cum laude with a bachelor
+				of science degree in political science and a minor in economics. At Saint Vincent College, she played varsity tennis
+				and was a George Washington Fellow. Following her undergraduate education, she attended Ohio Northern University College
+				of Law from which she graduated with honors. Ms. Cronauer is admitted to practice law in the States of New York and Ohio.
+				She has experience in the full range of defense representation including Supreme Court and Appellate oral arguments,
+				complex motion and appellate brief production and representation of clients in mediations, arbitrations and trials. Mr.
+				Cronauer is a member of the New York State Bar, the Erie County Bar Association and the Western New York Defense Trial
+				Lawyers Association.
+			</p>
 			<div class="row">
 				<div class="col-md-6">
 					<h4> Contact: </h4>
@@ -242,26 +251,41 @@
 					Suite 600</br>
 					Buffalo, New York 14202</br>
 					(716) 856-1300</br>
-					<a href="mailto:aneurohr@barthbehr.com">aneurohr@barthbehr.com</a></br>
+					<a href="mailto:rcronauer@barthbehr.com">rcronauer@barthbehr.com</a></br>
 				</div>
 				<div class="col-md-6">
 					<h4> Concentrations: </h4>
-					Labor Law </br>
-					Lead Paint and Toxic Tort Defense </br>
-					Motor Vehicle Litigation </br>
-					Premises Liability </br>
-					Trial and Appellate Litigation </br>
+					Motor Vehicle Litigation  <br />
+					Civil Rights Litigation <br />
+					Municipal Liability <br />
+					Premises Liability <br />
+					Trial and Appellate Litigation <br />
 				</div>
 			</div>
+		</div>
+
+		<div class="col-md-2"><img class="headshot" src="imgs/brendon.jpg"></div>
+		<div id="minheight" class="col-md-10">
+			<h2> Brendan Byrne</h2>
+			<h3> Associate Attorney </h3>
+			<p>In May of 2010, Mr. Byrne graduated from Case Western Reserve University School of Law and immediately took and passed the July of 2010 New York State Bar Examination.  After being admitted to practice in March of 2011, Mr. Byrne began his career as an insurance defense trial attorney and has worked in that capacity ever since.  As an insurance defense trial attorney, Mr. Byrne has handled a high volume of cases and has successfully represented the interests of municipalities, police departments, school districts, private business and private individuals in negligence actions throughout New York State.  Mr. Byrne has extensive experience litigating actions pertaining to motor vehicle accidents and premises liability.  Mr. Byrne is a lifelong native of Western New York and is a member of the New York State Bar Association as well as the Erie County Bar Association.
+			</p>
 			<div class="row">
 				<div class="col-md-6">
-					<h4> Affiliations: </h4>
-					FIU Law Review Director of External Affairs, Labor and Employment Relations Society Buffalo Intellectual Property Law Journal
+					<h4> Contact: </h4>
+					Buffalo Office </br>
+					43 Court Street </br>
+					Suite 600</br>
+					Buffalo, New York 14202</br>
+					(716) 856-1300</br>
+					<a href="mailto:bbyrne@barthbehr.com">bbyrne@barthbehr.com</a></br>
 				</div>
 				<div class="col-md-6">
-					<h4> Admissions: </h4>
-					State of New York </br>
-
+					<h4> Concentrations: </h4>
+					Motor Vehicle Litigation  <br />
+					Civil Rights Litigation <br />
+					Premises Liability <br />
+					Trial and Appellate Litigation <br />
 				</div>
 			</div>
 		</div>
@@ -406,7 +430,8 @@
 		<div class="container">
 
 			<p id="copy"> <a href="http://barthbehr.com/"> &copy; Barth Sullivan Behr 2014 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
-				Advertising</p>
+				Advertising
+			</p>
 		</div>
 	</footer>
 	</div>
