--- a/attorneys.html
+++ b/attorneys.html
@@ -229,19 +229,12 @@
 			</div>
 		</div>
 
-		<div class="col-md-2"><img class="headshot" src="imgs/rebecca.jpg"></div>
+
+		<div class="col-md-2"><img class="headshot" src="imgs/johncondren.jpg"></div>
 		<div id="minheight" class="col-md-10">
-			<h2> Rebecca C. Cronauer</h2>
-			<h3> Associate Attorney </h3>
-			<p>Ms. Cronauer is an associate attorney working with the firm’s insurance defense and municipal liability practice groups.
-				Ms. Cronauer attended Saint Vincent College in Latrobe, Pennsylvania where she graduated magna cum laude with a bachelor
-				of science degree in political science and a minor in economics. At Saint Vincent College, she played varsity tennis
-				and was a George Washington Fellow. Following her undergraduate education, she attended Ohio Northern University College
-				of Law from which she graduated with honors. Ms. Cronauer is admitted to practice law in the States of New York and Ohio.
-				She has experience in the full range of defense representation including Supreme Court and Appellate oral arguments,
-				complex motion and appellate brief production and representation of clients in mediations, arbitrations and trials. Mr.
-				Cronauer is a member of the New York State Bar, the Erie County Bar Association and the Western New York Defense Trial
-				Lawyers Association.
+			<h2>John R. Condren</h2>
+			<h3> Senior Trial Attorney </h3>
+			<p>Mr. Condren is a Senior Trial Attorney with extensive experience in the areas of insurance defense litigation and insurance coverage.   He is a 1988 graduate of the State University of New York at Buffalo, having received a B.A. in Psychology.   In 1992, Mr. Condren received his J.D. from the University of Toledo College of Law in Toledo, Ohio.  For upwards of 25 years, he has regularly appeared in the New York State and Federal District Courts at the trial and appellate levels and has taken numerous cases to verdict over the course of his career.   He is also a frequent lecturer and presenter on topics involving personal injury litigation and insurance coverage.  
 			</p>
 			<div class="row">
 				<div class="col-md-6">
@@ -251,15 +244,32 @@
 					Suite 600</br>
 					Buffalo, New York 14202</br>
 					(716) 856-1300</br>
-					<a href="mailto:rcronauer@barthbehr.com">rcronauer@barthbehr.com</a></br>
+					<a href="mailto:jcondren@barthbehr.com">jcondren@barthbehr.com</a></br>
 				</div>
 				<div class="col-md-6">
 					<h4> Concentrations: </h4>
 					Motor Vehicle Litigation  <br />
-					Civil Rights Litigation <br />
-					Municipal Liability <br />
-					Premises Liability <br />
-					Trial and Appellate Litigation <br />
+					Insurance coverage and litigation <br />
+					Premises liability litigation <br />
+					Trial and appellate litigation  <br />
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<h4> Affiliations: </h4>
+					New York State Bar Association – Torts, Insurance and Compensation Law Section <br />
+					Bar Association of Erie County – Negligence Committee <br />
+					Western New York Trial Lawyers Association  <br />
+					Defense Trial Lawyers Association of Western New York <br />
+					Defense Association of New York, Inc. <br />
+					Buffalo Claims Association <br />
+					The 11 Day Power Play, Inc. – Executive Board Member <br />
+				</div>
+				<div class="col-md-6">
+					<h4> Admissions: </h4>
+					U.S. District Court, Western District of New York
+					U.S. District Court, Northern District of New York
+					Has appeared Pro Hac Vice in a number of other jurisdictions
 				</div>
 			</div>
 		</div>
