--- a/attorneys.html
+++ b/attorneys.html
@@ -274,11 +274,11 @@
 			</div>
 		</div>
 
-		<div class="col-md-2"><img class="headshot" src="imgs/brendon.jpg"></div>
+		<div class="col-md-2"><img class="headshot" src="imgs/dominic.jpg"></div>
 		<div id="minheight" class="col-md-10">
-			<h2> Brendan Byrne</h2>
+			<h2> Dominic Chimera </h2>
 			<h3> Associate Attorney </h3>
-			<p>In May of 2010, Mr. Byrne graduated from Case Western Reserve University School of Law and immediately took and passed the July of 2010 New York State Bar Examination.  After being admitted to practice in March of 2011, Mr. Byrne began his career as an insurance defense trial attorney and has worked in that capacity ever since.  As an insurance defense trial attorney, Mr. Byrne has handled a high volume of cases and has successfully represented the interests of municipalities, police departments, school districts, private business and private individuals in negligence actions throughout New York State.  Mr. Byrne has extensive experience litigating actions pertaining to motor vehicle accidents and premises liability.  Mr. Byrne is a lifelong native of Western New York and is a member of the New York State Bar Association as well as the Erie County Bar Association.
+			<p>Mr. Chimera is a 2014 graduate of the State University of New York at Buffalo, having received a B.A. in History. He graduated from the University at Buffalo Law School in 2018 and immediately took and passed the July 2018 New York State Bar Exam. Mr. Chimera was admitted to practice in January of 2019.
 			</p>
 			<div class="row">
 				<div class="col-md-6">
@@ -293,13 +293,62 @@
 				<div class="col-md-6">
 					<h4> Concentrations: </h4>
 					Motor Vehicle Litigation  <br />
-					Civil Rights Litigation <br />
+					Insurance coverage and litigation <br />
 					Premises Liability <br />
-					Trial and Appellate Litigation <br />
+					Alternative Dispute Resolution <br />
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<h4> Affiliations: </h4>
+					Bar Association of Erie County, New York State Bar Association <br />
+				</div>
+				<div class="col-md-6">
+					<h4> Admissions: </h4>
+					State of New York <br />
 				</div>
 			</div>
 		</div>
 
+
+		<h2>Syracuse Office</h2>
+		<hr />
+
+		<div class="col-md-2"><img class="headshot" src="imgs/David.jpg"></div>
+		<div id="minheight" class="col-md-10">
+			<h2> David H. Walsh IV </h2>
+			<h3> Senior Trial Attorney </h3>
+			<p></p>
+			<div class="row">
+				<div class="col-md-6">
+					<h4> Contact: </h4>
+					Syracuse Office </br>
+					224 Harrison Street </br>
+					Suite 208</br>
+					Syracuse New York 13202</br>
+					(315) 234-1864</br>
+					<a href="mailto:dwalsh@barthbehr.com">dwalsh@barthbehr.com</a></br>
+				</div>
+				<div class="col-md-6">
+					<h4> Concentrations: </h4>
+					Trial Litigation Motor Vehicle La Labor Law Municipal Liability Products Civil Rights Litigation Employment Litigation Premises
+					Liability.
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<h4> Affiliations: </h4>
+					New York State Bar Association
+				</div>
+				<div class="col-md-6">
+					<h4> Admissions: </h4>
+					State of New York U.S. District Court, Eastern District of New York U.S. District Court, Northern District of New York U.S.
+					District Court, Southern District of New York U.S. District Court, Western District of New York U.S. Court of Appeals
+					for Second Circuit U.S. Court of Federal Claims
+
+				</div>
+			</div>
+		</div>
 		<div class="col-md-2"><img class="headshot" src="imgs/Dan.jpg"></div>
 		<div id="minheight" class="col-md-10">
 			<h2> Daniel Cartwright</h2>
@@ -338,45 +387,6 @@
 					State of New York </br>
 					U.S. District Court, Western District of N.Y.</br>
 
-
-				</div>
-			</div>
-		</div>
-
-		<h2>Syracuse Office</h2>
-		<hr />
-
-		<div class="col-md-2"><img class="headshot" src="imgs/David.jpg"></div>
-		<div id="minheight" class="col-md-10">
-			<h2> David H. Walsh IV </h2>
-			<h3> Senior Trial Attorney </h3>
-			<p></p>
-			<div class="row">
-				<div class="col-md-6">
-					<h4> Contact: </h4>
-					Syracuse Office </br>
-					224 Harrison Street </br>
-					Suite 208</br>
-					Syracuse New York 13202</br>
-					(315) 234-1864</br>
-					<a href="mailto:dwalsh@barthbehr.com">dwalsh@barthbehr.com</a></br>
-				</div>
-				<div class="col-md-6">
-					<h4> Concentrations: </h4>
-					Trial Litigation Motor Vehicle La Labor Law Municipal Liability Products Civil Rights Litigation Employment Litigation Premises
-					Liability.
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<h4> Affiliations: </h4>
-					New York State Bar Association
-				</div>
-				<div class="col-md-6">
-					<h4> Admissions: </h4>
-					State of New York U.S. District Court, Eastern District of New York U.S. District Court, Northern District of New York U.S.
-					District Court, Southern District of New York U.S. District Court, Western District of New York U.S. Court of Appeals
-					for Second Circuit U.S. Court of Federal Claims
 
 				</div>
 			</div>
