added new email

--- a/attorneys.html
+++ b/attorneys.html
@@ -288,7 +288,7 @@
 					Suite 600</br>
 					Buffalo, New York 14202</br>
 					(716) 856-1300</br>
-					<a href="mailto:bbyrne@barthbehr.com">bbyrne@barthbehr.com</a></br>
+					<a href="mailto:dchimera@barthbehr.com">dchimera@barthbehr.com</a></br>
 				</div>
 				<div class="col-md-6">
 					<h4> Concentrations: </h4>
