did some updating

--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
 
 						<br />
 
-						<strong>Address:</strong></br>43 Court Street </br> Suite 600 </br> Buffalo, New York 14202
+						<strong>Address:</strong></br>367 Linwood Ave </br> Buffalo, New York 14209
 
 						<br />
 
@@ -218,7 +218,7 @@
 
 
 
-		<p id="copy"> <a href="http://barthbehr.com/">&copy; Barth Sullivan Behr 2014 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
+		<p id="copy"> <a href="http://barthbehr.com/">&copy; Barth Sullivan Behr 2020 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
 			Advertising
 		</p>
 
