--- a/attorneys.html
+++ b/attorneys.html
@@ -102,9 +102,8 @@
 				<div class="col-md-6">
 					<h4> Contact: </h4>
 					Buffalo Office </br>
-					43 Court Street </br>
-					Suite 600</br>
-					Buffalo, New York 14202</br>
+					367 Linwood Ave </br>
+					Buffalo, New York 14209</br>
 					(716) 856-1300</br>
 					<a href="mailto:pbarth@barthbehr.com">pbarth@barthbehr.com</a></br>
 				</div>
@@ -154,9 +153,8 @@
 				<div class="col-md-6">
 					<h4> Contact: </h4>
 					Buffalo Office </br>
-					43 Court Street </br>
-					Suite 600</br>
-					Buffalo, New York 14202</br>
+					367 Linwood Ave </br>
+					Buffalo, New York 14209</br>
 					(716) 856-1300</br>
 					<a href="mailto:lbehr@barthbehr.com">lbehr@barthbehr.com</a></br>
 				</div>
@@ -205,9 +203,8 @@
 				<div class="col-md-6">
 					<h4> Contact: </h4>
 					Buffalo Office </br>
-					43 Court Street </br>
-					Suite 600</br>
-					Buffalo, New York 14202</br>
+					367 Linwood Ave </br>
+					Buffalo, New York 14209</br>
 					(716) 856-1300</br>
 					<a href="mailto:dhamberger@barthbehr.com">dhamberger@barthbehr.com</a></br>
 				</div>
@@ -249,9 +246,8 @@
 				<div class="col-md-6">
 					<h4> Contact: </h4>
 					Buffalo Office </br>
-					43 Court Street </br>
-					Suite 600</br>
-					Buffalo, New York 14202</br>
+					367 Linwood Ave </br>
+					Buffalo, New York 14209</br>
 					(716) 856-1300</br>
 					<a href="mailto:jcondren@barthbehr.com">jcondren@barthbehr.com</a></br>
 				</div>
@@ -293,9 +289,8 @@
 				<div class="col-md-6">
 					<h4> Contact: </h4>
 					Buffalo Office </br>
-					43 Court Street </br>
-					Suite 600</br>
-					Buffalo, New York 14202</br>
+					367 Linwood Ave </br>
+					Buffalo, New York 14209</br>
 					(716) 856-1300</br>
 					<a href="mailto:dchimera@barthbehr.com">dchimera@barthbehr.com</a></br>
 				</div>
@@ -381,7 +376,7 @@
 	<footer>
 		<div class="container">
 
-			<p id="copy"> <a href="http://barthbehr.com/"> &copy; Barth Sullivan Behr 2014 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
+			<p id="copy"> <a href="http://barthbehr.com/"> &copy; Barth Sullivan Behr 2020 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
 				Advertising
 			</p>
 		</div>
