--- a/contact.html
+++ b/contact.html
@@ -148,9 +148,7 @@
       <div class="col-sm-6">
 
 
-
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2923.3734338346735!2d-78.87605099999999!3d42.8860673!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d31249a74002ff%3A0xba410b9959984fc7!2s43+Court+St+%23600!5e0!3m2!1sen!2s!4v1403596218493"
-          width="400" height="300" frameborder="0" style="border:0"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5516.2849401002695!2d-78.86726276490622!3d42.9118787561367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d312ee1a3f7763%3A0xdff26cb17872669d!2s367%20Linwood%20Ave%2C%20Buffalo%2C%20NY%2014209%2C%20USA!5e0!3m2!1sen!2snl!4v1579200032357!5m2!1sen!2snl" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 
       </div>
 
@@ -178,8 +176,7 @@
           <address>
 
 
-
-            <strong>Address:</strong></br>43 Court Street </br> Suite 600 </br> Buffalo, New York 14202
+            <strong>Address:</strong></br>367 Linwood Ave</br> Suite 600 </br> Buffalo, New York 14209
 
             <br />
 
@@ -249,7 +246,7 @@
 
     <hr />
 
-    <p id="copy"> <a href="http://barthbehr.com/">&copy; Barth Sullivan Behr 2014 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
+    <p id="copy"> <a href="http://barthbehr.com/">&copy; Barth Sullivan Behr 2020 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
       Advertising</p>
 
     </div>
