changed this too

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="author" content="" />
 
     <link
-      href="http://fonts.googleapis.com/css?family=Lato"
+      href="https://fonts.googleapis.com/css?family=Lato"
       rel="stylesheet"
       type="text/css"
     />
