--- a/disclaimer.html
+++ b/disclaimer.html
@@ -17,7 +17,7 @@
 
   <meta name="author" content="" />
 
-  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css' />
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css' />
 
   <link rel="shortcut icon" href="favicon.ico" />
 
