--- a/practiceareas.html
+++ b/practiceareas.html
@@ -19,7 +19,7 @@
 
   <link rel="shortcut icon" href="favicon.ico" />
 
-  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
   <title>Barth Condren</title>
 
