--- a/attorneys.html
+++ b/attorneys.html
@@ -38,7 +38,7 @@
 		<nav class="navbar navbar-default" role="navigation">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-brand">
-				<a href="http://barthcondren.com/index.html"><img class="imagess" src="imgs/logo-no-address4.png" /></a>
+				<a href="http://barthcondren.com/index.html"><img class="imagess" src="imgs/logo-no-address4.png" alt="barth condren logo" /></a>
 			</div>
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -84,7 +84,7 @@
 
 		<div class="col-md-2">
 
-			<img class="headshot" src="imgs/PCBw.jpg">
+			<img class="headshot" src="imgs/PCBw.jpg" alt="Philip Barth headshot">
 
 		</div>
 
@@ -137,7 +137,7 @@
 			</div>
 		</div>
 
-		<div class="col-md-2"><img class="headshot" src="imgs/DPHw.jpg"></div>
+		<div class="col-md-2"><img class="headshot" src="imgs/DPHw.jpg" alt="Doug Hamberger headshot"></div>
 		<div id="minheight" class="col-md-10">
 			<h2> Douglas P. Hamberger </h2>
 			<h3> Senior Trial Attorney </h3>
@@ -183,7 +183,7 @@
 		</div>
 
 
-		<div class="col-md-2"><img class="headshot" src="imgs/johncondren.jpg"></div>
+		<div class="col-md-2"><img class="headshot" src="imgs/johncondren.jpg" alt="John Condren headshot"></div>
 		<div id="minheight" class="col-md-10">
 			<h2>John R. Condren</h2>
 			<h3> Senior Trial Attorney </h3>
@@ -226,7 +226,7 @@
 			</div>
 		</div>
 
-		<div class="col-md-2"><img class="headshot" src="imgs/dominic.jpg"></div>
+		<div class="col-md-2"><img class="headshot" src="imgs/dominic.jpg" alt="Dominic Chimera headshot"></div>
 		<div id="minheight" class="col-md-10">
 			<h2> Dominic Chimera </h2>
 			<h3> Associate Attorney </h3>
