--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-brand">
           <a href="http://barthcondren.com/index.html"
-            ><img class="imagess" src="imgs/logo-no-address4.png"
+            ><img
+              class="imagess"
+              src="imgs/logo-no-address4.png"
+              alt="barth condren logo"
           /></a>
         </div>
         <div class="navbar-header">
