--- a/practiceareas.html
+++ b/practiceareas.html
@@ -65,7 +65,7 @@
       <div class="navbar-brand">
 
         <a href="http://barthcondren.com/index.html">
-          <img class="imagess" src="imgs/logo-no-address4.png" />
+          <img class="imagess" src="imgs/logo-no-address4.png" alt="barth condren logo" />
         </a>
 
       </div>
