--- a/disclaimer.html
+++ b/disclaimer.html
@@ -62,7 +62,7 @@
 
       <div class="navbar-brand">
 
-        <a href="http://barthcondren.com/index.html"><img class="imagess" src="imgs/logo-no-address4.png" /></a>
+        <a href="http://barthcondren.com/index.html"><img class="imagess" src="imgs/logo-no-address4.png" alt="barth condren logo" /></a>
 
       </div>
 
