ehre changed emails

--- a/contact.html
+++ b/contact.html
@@ -191,7 +191,7 @@
 
             <strong>Email:</strong>
 
-            <a href="mailto:info@barthbehr.com">info@barthbehr.com</a>
+            <a href="mailto:pbarth@barthcondren.com">pbarth@barthcondren.com</a>
 
           </address>
 
@@ -215,7 +215,7 @@
 
             <strong>Email:</strong>
 
-            <a href="mailto:info@barthbehr.com">info@barthbehr.com</a>
+            <a href="mailto:pbarth@barthcondren.com">pbarth@barthcondren.com</a>
 
             <br /> </address>
 
