--- a/attorneys.html
+++ b/attorneys.html
@@ -300,6 +300,22 @@
 			</div>
 		</div>
 
+		<br />
+		<h2> Of Counsel</h2>
+		<hr />
+		<div class="row">
+			<div class="col-md-2"></div>
+			<div class="col-md-10">
+				<h4> Richard Scholnick, Esq. </h4>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-2"></div>
+			<div class="col-md-10">
+				<h4> Roger V. Barth, Esq </h4>
+			</div>
+		</div>
+
 	</div>
 
 	</div>
