--- a/attorneys.html
+++ b/attorneys.html
@@ -299,27 +299,22 @@
 				</div>
 			</div>
 		</div>
+		<div class="col-md-2"></div>
+		<div class="col-md-10">
+			<h2> Richard Scholnick, Esq. </h2>
+			<h3> Of Counsel </h3>		</div>
 
-		<br />
-		<h2> Of Counsel</h2>
-		<hr />
-		<div class="row">
-			<div class="col-md-2"></div>
-			<div class="col-md-10">
-				<h4> Richard Scholnick, Esq. </h4>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-2"></div>
-			<div class="col-md-10">
-				<h4> Roger V. Barth, Esq </h4>
-			</div>
-		</div>
 
+	<div class="col-md-2"></div>
+	<div  class="col-md-10">
+		<h2> Roger V. Barth, Esq </h2>
+		<h3> Of Counsel </h3>	</div>
+
+</div>
 	</div>
 
 	</div>
-
+</div>
 
 
 	<hr />
