added this stuff

--- a/contact.html
+++ b/contact.html
@@ -183,7 +183,7 @@
           <address>
 
 
-            <strong>Address:</strong></br>367 Linwood Ave</br> Suite 600 </br> Buffalo, New York 14209
+            <strong>Address:</strong></br>367 Linwood Ave </br> Buffalo, New York 14209
 
             <br />
 
@@ -207,7 +207,7 @@
 
           <address>
 
-            <strong>Address:</strong></br>224 Harrison Street </br> Suite 208 </br> Syracuse, New York 13202
+            <strong>Address:</strong></br>224 Harrison Street </br> Syracuse, New York 13202
 
             <br />
 
